force-app/main/default/objects/FS_Opp__c/FS_Opp__c.object-meta.xml
<CustomObject>
    <label>FS Opp</label>
    <nameField>
        <displayFormat>FS_O-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FS Opps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>