force-app/main/default/objects/FS_Opp__c/fields/Activity_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Activity_Level_1__c</fullName>
    <label>Activity Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actively Involved</fullName>
            </value>
            <value>
                <fullName>Somewhat Involved</fullName>
            </value>
            <value>
                <fullName>Not Involved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>