force-app/main/default/objects/FS_Opp__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <referenceTo>CapIQ_Company__c</referenceTo>
    <relationshipLabel>FS Opportunities</relationshipLabel>
    <relationshipName>FS_Opp_Companies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>