force-app/main/default/objects/FS_Opp__c/fields/Coverage_Officer_2__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Officer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Officer 2</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Coverage Team Officer must be on related CapIQ Company.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Houlihan_Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.Industry_Group__c</field>
            <operation>equals</operation>
            <value>FSCG</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FS Opps (Coverage Officer 2)</relationshipLabel>
    <relationshipName>FSCG_Opps_CT2</relationshipName>
    <type>Lookup</type>
</CustomField>