force-app/main/default/objects/FS_Opp__c/fields/FS_OPP_UNIQUE__c.field-meta.xml
<CustomField>
    <fullName>FS_OPP_UNIQUE__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>FS OPP UNIQUE</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>