force-app/main/default/objects/FS_Opp__c/validationRules/FS_OPP_Officer_Activity3.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_OPP_Officer_Activity3</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT(ISBLANK(Coverage_Officer_3__c))&amp;&amp;
ISPICKVAL( Activity_Level_3__c,&apos;&apos; )) ||

(ISBLANK(Coverage_Officer_3__c) &amp;&amp; NOT(ISPICKVAL(Activity_Level_3__c,&apos;&apos;)))</errorConditionFormula>
    <errorDisplayField>Activity_Level_3__c</errorDisplayField>
    <errorMessage>Activity Level required only when Coverage Officer selected.</errorMessage>
</ValidationRule>