force-app/main/default/objects/FS_Opp__c/validationRules/FS_OPP_Officer_Activity5.validationRule-meta.xml
<ValidationRule>
    <fullName>FS_OPP_Officer_Activity5</fullName>
    <active>true</active>
    <errorConditionFormula>(NOT(ISBLANK(Coverage_Officer_5__c))&amp;&amp;
ISPICKVAL( Activity_Level_5__c,&apos;&apos; )) ||

(ISBLANK(Coverage_Officer_5__c) &amp;&amp; NOT(ISPICKVAL(Activity_Level_5__c,&apos;&apos;)))</errorConditionFormula>
    <errorDisplayField>Activity_Level_5__c</errorDisplayField>
    <errorMessage>Activity Level required only when Coverage Officer selected.</errorMessage>
</ValidationRule>